[package]
name = "purple"
version = "0.1.0"
authors = ["Druue <tileyratkins@gmail.com> (https://twitter.com/tileyratkins)", "Halvard Mørstad (https://github.com/halvardssm)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.0"
tiled = "0.9.2"
serde = "1.0.111"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]